feat: update index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Lazy Coder - The Ultimate Web App for Source Code Improvement and Fixes">
     <title>Lazy Coder</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500;600&display=swap');
